--- a/Sec1_HW8.ipynb
+++ b/Sec1_HW8.ipynb
@@ -1275,21 +1275,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 66,
    "metadata": {
     "id": "w9A7eR6Gi5EK"
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'X_base_learners' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [64]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m super_learner\u001b[38;5;241m.\u001b[39mfit(\u001b[43mX_base_learners\u001b[49m\u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m1\u001b[39m), y_train)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'X_base_learners' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/kw/opt/anaconda3/lib/python3.9/site-packages/sklearn/utils/validation.py:993: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression()"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1298,21 +1305,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 67,
    "metadata": {
     "id": "bGPARyepiNnr"
    },
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'LogisticRegression' object has no attribute 'coef_'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [65]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43msuper_learner\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcoef_\u001b[49m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'LogisticRegression' object has no attribute 'coef_'"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[0.51198746, 5.09583286, 0.87597745]])"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1379,17 +1385,17 @@
     "id": "3bmKieMbUeX0"
    },
    "source": [
-    "# 6.)"
+    "# 6.) Interpretation"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "id": "3idrjobeUaGR"
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Based on the coefficients, the boosted tree model exerts the most significant influence on the super learner's predictions, as indicated by its highest coefficient value. The decision tree model comes next in terms of impact, followed by the bagged tree model."
+   ]
   },
   {
    "cell_type": "code",
